--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <footer>
     <div class="footer">
       <p>&copy; 2024 KPT Mangalore. All Rights Reserved.</p>
-      <p>Designed and Developed by the Computer Science & Engineering Department, Karnataka Government Polytechnic, Mangalore</p>
+      <p>Designed and Developed by Pratyush, Computer Science & Engineering Department, Karnataka Government Polytechnic, Mangalore</p>
     </div>
   </footer>
 </body>
